[package]
name = "StoryComposer2"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["ico"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
